Change scrollbar appearance, fix css hover

--- a/web/css/style.css
+++ b/web/css/style.css
@@ -1312,6 +1312,26 @@ section.custom-settings span.select2-selection {
     }
 }
 
+/** Scrollbar **/
+::-webkit-scrollbar {
+    width: 8px;
+}
+
+::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
+    background: rgba(66, 66, 66, 0.8);
+}
+
+.navbar-custom-menu:hover {
+    cursor: pointer;
+}
+
 /** MEDIA QUERIES **/
 
 @media (min-width: 768px) {
